Update Toggle Button Overflow
(1) "clip" overflow was used in an old experimental build and forgotten
about, but then rediscovered when it created a UI issue with
Gecko/Firefox

--- a/extension/content-script/css/content-script.css
+++ b/extension/content-script/css/content-script.css
@@ -136,7 +136,7 @@
 
 .job-block-attribute-toggle-button-text {
   max-width: 25ch;
-  overflow: clip visible;
+  overflow: visible;
   position: relative;
   text-align: center;
   text-overflow: ellipsis;
