Revert Toggle Button Text Overflow Value
(1) Toggle button text overflow value was changed back to
"clip visible". A solution that works with Gecko/Firefox will be needed
later.

--- a/extension/content-script/css/content-script.css
+++ b/extension/content-script/css/content-script.css
@@ -136,7 +136,7 @@
 
 .job-block-attribute-toggle-button-text {
   max-width: 25ch;
-  overflow: visible;
+  overflow: clip visible;
   position: relative;
   text-align: center;
   text-overflow: ellipsis;
