--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -43,6 +43,7 @@ body {
   height: calc(100% - 1rem);
   line-height: 1.4;
   margin: var(--body-margin);
+  width: calc(var(--document-width) - var(--body-margin) * 2);
 }
 
 main {
@@ -283,7 +284,9 @@ main.expanded-list .collapse-expand-button .top-half {
   overflow-y: auto;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
+  scrollbar-color: hsl(0, 0%, 0%, 0.5) hsl(0, 0%, 0%, 0.2);
   scrollbar-gutter: stable both-edges;
+  scrollbar-width: thin;
 }
 
 .hidden-job-container {
@@ -365,32 +368,6 @@ main.expanded-list .collapse-expand-button .top-half {
   grid-row: 1 / 2;
   height: 100%;
   max-width: 100%;
-}
-
-::-webkit-scrollbar {
-  width: var(--scrollbar-width);
-}
-
-::-webkit-scrollbar-track {
-  background: hsl(0, 0%, 0%, 0.2);
-  border-radius: 0.5rem;
-}
-
-::-webkit-scrollbar-track:hover {
-  background: hsl(0, 0%, 0%, 0.25);
-}
-
-::-webkit-scrollbar-thumb {
-  background: hsl(0, 0%, 0%, 0.5);
-  border-radius: 0.5rem;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: hsl(0, 0%, 0%, 1);
-}
-
-::-webkit-scrollbar-corner {
-  background: transparent;
 }
 
 .unhide-all-and-undo-buttons {
@@ -489,6 +466,32 @@ input[type="checkbox"] {
   height: 12px;
   margin: 0;
   width: 12px;
+}
+
+::-webkit-scrollbar {
+  width: var(--scrollbar-width);
+}
+
+::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 0%, 0.2);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: hsl(0, 0%, 0%, 0.25);
+}
+
+::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 0%, 0.5);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 0%, 1);
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 .display-none {
