--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -29,8 +29,15 @@
 html {
   --document-width: 21rem;
   --scrollbar-width: 10px;
-  height: 37.5rem;
   width: var(--document-width);
+}
+
+html[data-applicable-tab="true"] {
+  height: 37.5rem;
+}
+
+html[data-applicable-tab="false"] {
+  height: auto;
 }
 
 body {
@@ -138,17 +145,113 @@ main.expanded-list .branding-container > h1 {
   align-items: center;
   background: hsl(30, 56.6%, 65.7%);
   border-radius: 1rem;
-  display: flex;
+  display: none;
   flex: 1 0 auto;
   flex-direction: column;
   gap: 1rem;
+  justify-content: center;
   justify-items: center;
   padding: 1rem;
   width: calc(100% - 2rem);
 }
 
-.job-board-name {
+html[data-applicable-tab="true"] .options-for-applicable-tabs,
+html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
+  display: flex;
+}
+
+.job-board-search-options-container {
+  align-items: center;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+}
+
+.job-board-search-option-container {
+  border-radius: 0.5rem;
+  height: 1.5rem;
+  display: grid;
+  padding: 0.5rem;
+  place-items: center;
+  transition: background-color 200ms ease-out;
+  width: calc(100% - 1rem);
+}
+
+.job-board-search-option-container[data-job-board-id="linkedIn"][data-checked="true"] {
+  background: hsl(210, 90%, 40%);
+}
+
+.job-board-search-option-container[data-job-board-id="indeed"][data-checked="true"] {
+  background: hsl(218, 100%, 30%);
+}
+
+.job-board-search-option-container[data-checked="false"] {
+  background: hsl(0, 0%, 100%, 0);
+  cursor: pointer;
+}
+
+.job-board-search-option-container[data-checked="false"]:hover {
+  background: hsl(0, 0%, 100%, 0.2);
+}
+
+.job-board-search-option-container[data-checked="false"]:active {
+  background: hsl(0, 0%, 100%, 0.3);
+}
+
+.job-board-search-option-container * {
+  transition: fill 200ms ease-out;
+}
+
+.job-board-search-option-container[data-checked="true"] * {
+  fill: hsl(0, 0%, 100%);
+}
+
+.job-board-search-option-container[data-checked="false"] * {
+  fill: hsl(0, 0%, 50%);
+}
+
+.job-board-search-option-container > input {
+  position: absolute;
+}
+
+.options-for-inapplicable-tabs .job-board-name {
+  width: 75%;
+}
+
+.options-for-applicable-tabs .job-board-name {
   width: 50%;
+}
+
+.job-name-search-container {
+  border-radius: 0.5rem;
+  display: grid;
+  grid-template-columns: 1fr 30px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.job-name-search-container > input {
+  grid-column: 1 / 3;
+  grid-row: 1 / 1;
+  width: 100%;
+}
+
+.job-name-search-container > button {
+  background: hsl(0, 0%, 0%, 0);
+  grid-column: 2 / 3;
+  grid-row: 1 / 1;
+  height: auto;
+  transition: background-color 200ms ease-out;
+  width: 30px;
+}
+
+.job-name-search-container > button:hover {
+  background: hsl(0, 0%, 0%, 0.1);
+}
+
+.job-name-search-container > button:active {
+  background: hsl(0, 0%, 0%, 0.2);
 }
 
 .hidden-jobs-container {
@@ -208,6 +311,7 @@ main.expanded-list .branding-container > h1 {
   --width: 0.5rem;
   background: hsl(0, 0%, 0%, 0.2);
   border-radius: 1rem;
+  box-sizing: content-box;
   display: grid;
   height: var(--height);
   left: calc(
@@ -221,17 +325,6 @@ main.expanded-list .branding-container > h1 {
   transition-property: background-color, opacity;
   width: var(--width);
   z-index: 1;
-}
-
-.collapse-expand-button[data-list-is-scrollable="true"] {
-  opacity: 1;
-  pointer-events: all;
-}
-
-main:not(.expanded-list)
-  .collapse-expand-button[data-list-is-scrollable="false"] {
-  opacity: 0;
-  pointer-events: none;
 }
 
 .bottom-half,
@@ -290,14 +383,12 @@ main.expanded-list .collapse-expand-button .top-half {
 }
 
 .hidden-job-container {
+  align-items: start;
   background: hsl(0, 0%, 100%, 0.3);
   border-radius: 1rem;
   box-sizing: border-box;
   cursor: pointer;
   display: grid;
-  font-family: "Open Sans", sans-serif;
-  font-size: calc(40px / 3);
-  font-weight: 400;
   grid-template-columns: 1fr auto;
   height: 35px;
   justify-items: center;
@@ -379,22 +470,34 @@ main.expanded-list .collapse-expand-button .top-half {
 
 button {
   border: none;
-  border-radius: 0.5rem;
-  color: hsl(0, 0%, 100%);
   cursor: pointer;
-  font-family: "Open Sans", sans-serif;
+  display: grid;
+  font-family: inherit;
   font-size: calc(40px / 3);
-  font-weight: 400;
-  height: 50px;
-  padding: 1rem;
+  font-weight: inherit;
+  place-items: center;
   transition: 200ms ease-out;
   transition-property: background-color, opacity;
   width: 100%;
 }
 
-button:disabled {
+:disabled {
   opacity: 0.1;
   pointer-events: none;
+}
+
+.collapse-expand-button:disabled {
+  opacity: 0;
+}
+
+.text-button {
+  border: none;
+  border-radius: 0.5rem;
+  color: hsl(0, 0%, 100%);
+  height: 50px;
+  padding: 1rem;
+  transition: 200ms ease-out;
+  transition-property: background-color, opacity;
 }
 
 .option-button {
@@ -437,16 +540,16 @@ button:disabled {
 }
 
 .toggle-container[data-checked="false"] {
-  background: hsl(0, 0%, 100%, 0.1);
+  background: hsl(0, 0%, 100%, 0.3);
   color: hsl(0, 0%, 0%);
 }
 
 .toggle-container[data-checked="false"]:hover {
-  background: hsl(0, 0%, 100%, 0.3);
+  background: hsl(0, 0%, 100%, 0.5);
 }
 
 .toggle-container[data-checked="false"]:active {
-  background: hsl(0, 0%, 100%, 0.4);
+  background: hsl(0, 0%, 100%, 0.6);
 }
 
 .toggle-container[data-checked="true"] {
@@ -462,10 +565,34 @@ button:disabled {
   background: hsl(0, 100%, 45%);
 }
 
+:focus-visible,
+.focus-visible-within:has(:focus-visible) {
+  outline: 4px solid hsl(0, 0%, 0%, 0.5);
+}
+
+.focus-visible-within * {
+  outline: none;
+}
+
 input[type="checkbox"] {
   height: 12px;
   margin: 0;
   width: 12px;
+}
+
+input[type="radio"] {
+  appearance: none;
+  margin: 0;
+}
+
+input[type="text"] {
+  border: none;
+  font-family: "Open Sans", sans-serif;
+  height: 2rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -492,8 +619,4 @@ input[type="checkbox"] {
 
 ::-webkit-scrollbar-corner {
   background: transparent;
-}
-
-.display-none {
-  display: none;
 }
