Make Z-Index Specific to Job Board
(1) z-index was adjusted by job board to ensure the job block element is
the top layer, but also does not block search dropdown menus.

This update was needed because the signed-out version of LinkedIn's job
search requires a minimum z-index of 3.

--- a/extension/content-script/css/content-script.css
+++ b/extension/content-script/css/content-script.css
@@ -9,7 +9,14 @@
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.job-block-element[data-job-board-id="indeed"] {
   z-index: 1;
+}
+
+.job-block-element[data-job-board-id="linkedIn"] {
+  z-index: 3;
 }
 
 .job-block-element * {
