Update Popup Body Scrollbar
(1) The popup's body scrollbar is visible if a user's page zoom is
higher than 100%, which I only noticed recently. However, the scrollbar
was barely visible because it was using the same style as the jobs list
scrollbar. Now the body scrollbar has its own style for better
visibility.

--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -620,3 +620,19 @@ input[type="text"] {
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
+
+body::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 100%, 0.5);
+}
+
+body::-webkit-scrollbar-track:hover {
+  background: hsl(0, 0%, 100%, 0.55);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 100%, 0.5);
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 100%, 1);
+}
