Update Search Input and Search Button Styles
(1) When a user searches, the search input and search button will now
take on disabled styles.

(2) Transitions for background-color and opacity were added for the
search input and search button.

--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -242,7 +242,8 @@ html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   height: auto;
-  transition: background-color 200ms ease-out;
+  transition: 200ms ease-out;
+  transition-property: background-color, opacity;
   width: 30px;
 }
 
@@ -484,6 +485,8 @@ button {
 :disabled {
   opacity: 0.1;
   pointer-events: none;
+  transition: 200ms ease-out;
+  transition-property: background-color, opacity;
 }
 
 .collapse-expand-button:disabled {
@@ -586,13 +589,21 @@ input[type="radio"] {
 }
 
 input[type="text"] {
+  background: hsl(0, 0%, 100%, 1);
   border: none;
   font-family: "Open Sans", sans-serif;
   height: 2rem;
   margin: 0;
   padding: 0;
   text-align: center;
+  transition: 200ms ease-out;
+  transition-property: background-color, opacity;
   width: 100%;
+}
+
+input[type="text"]:disabled {
+  background: hsl(0, 0%, 100%, 0.3);
+  opacity: 1;
 }
 
 ::-webkit-scrollbar {
