--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -220,6 +220,7 @@ html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
 }
 
 .options-for-applicable-tabs .job-board-name {
+  max-height: 32.4219px;
   width: 50%;
 }
 
