Add "Disabled" Styles to Job Board Buttons
(1) Job board buttons ("LinkedIn" and "Indeed") now no longer receive
pointer events when their checkbox input is disabled.

--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -211,6 +211,10 @@ html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
   fill: hsl(0, 0%, 50%);
 }
 
+.job-board-search-option-container:has(:disabled) {
+  pointer-events: none;
+}
+
 .job-board-search-option-container > input {
   position: absolute;
 }
