Fix Popup List Pointer Priority
(1) Added pointer-events: none; to .nothing-hidden-message so that it doesn't interfere with hidden job buttons.

--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -296,6 +296,7 @@ html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
   left: calc(50% - var(--width) * 0.5 - var(--padding));
   line-height: 1;
   padding: var(--padding);
+  pointer-events: none;
   position: absolute;
   text-align: center;
   top: calc(50% - var(--height) * 0.5 - var(--padding));
