--- a/extension/content-script/css/content-script.css
+++ b/extension/content-script/css/content-script.css
@@ -1,236 +1,250 @@
+html [data-hns-job-element] {
+  position: relative !important;
+}
+
+html[data-hns-remove-hidden-jobs="true"]
+  [data-hns-job-element]:has([data-hns-blocked-attribute="true"]) {
+  display: none !important;
+}
+
 .job-block-element {
-  all: unset;
+  all: unset !important;
+  background: transparent !important;
   display: block !important;
-  font-size: 16px;
-  height: 100%;
-  left: 0;
-  line-height: 1.4;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  width: 100%;
+  font-size: 16px !important;
+  height: 100% !important;
+  left: 0 !important;
+  line-height: 1.4 !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  top: 0 !important;
+  width: 100% !important;
 }
 
-.job-block-element[data-job-board-id="indeed"] {
-  z-index: 1;
+.job-block-element[data-hns-job-board-id="glassdoor"] {
+  z-index: 1 !important;
 }
 
-.job-block-element[data-job-board-id="linkedIn"] {
-  z-index: 3;
+.job-block-element[data-hns-job-board-id="indeed"] {
+  z-index: 1 !important;
+}
+
+.job-block-element[data-hns-job-board-id="linkedIn"] {
+  z-index: 3 !important;
 }
 
 .job-block-element * {
-  all: unset;
+  all: unset !important;
 }
 
 .job-block-blocked-job-overlay,
 .job-block-unblocked-job-overlay {
-  align-content: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 1;
+  align-content: center !important;
+  display: flex !important;
+  flex-direction: row !important;
+  flex-wrap: wrap !important;
+  height: 100% !important;
+  justify-content: center !important;
+  left: 0 !important;
+  opacity: 0 !important;
+  position: absolute !important;
+  top: 0 !important;
+  width: 100% !important;
+  z-index: 1 !important;
 }
 
 .job-block-blocked-job-overlay {
-  backdrop-filter: blur(10px);
-  background: hsl(0, 0%, 50%, 0.75);
-  justify-content: center;
+  backdrop-filter: blur(10px) !important;
+  background: hsl(0, 0%, 50%, 0.75) !important;
+  justify-content: center !important;
 }
 
-.job-block-element[data-job-block-blocked-job="true"]
+.job-block-element:has([data-hns-blocked-attribute="true"])
   .job-block-blocked-job-overlay {
-  opacity: 1;
-  pointer-events: auto;
-  transition: opacity 200ms ease-out;
-  user-select: none;
-  z-index: 2;
+  opacity: 1 !important;
+  pointer-events: auto !important;
+  transition: opacity 200ms ease-out !important;
+  user-select: none !important;
+  z-index: 2 !important;
 }
 
-.job-block-element[data-job-block-blocked-job="false"]
-  .job-block-blocked-job-overlay {
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 200ms ease-out 200ms;
-  z-index: 1;
+.job-block-element .job-block-blocked-job-overlay {
+  opacity: 0 !important;
+  pointer-events: none !important;
+  transition: opacity 200ms ease-out 200ms !important;
+  z-index: 1 !important;
 }
 
 .job-block-unblocked-job-overlay {
-  backdrop-filter: blur(0);
-  background: hsl(0, 0%, 50%, 0);
-  justify-content: end;
+  backdrop-filter: blur(0) !important;
+  background: hsl(0, 0%, 50%, 0) !important;
+  justify-content: end !important;
 }
 
-.job-block-element[data-job-block-blocked-job="true"]
+.job-block-element:has([data-hns-blocked-attribute="true"])
   .job-block-unblocked-job-overlay {
-  opacity: 0;
-  pointer-events: auto;
-  transition: opacity 200ms ease-out;
-  z-index: 1;
+  opacity: 0 !important;
+  pointer-events: auto !important;
+  transition: opacity 200ms ease-out !important;
+  z-index: 1 !important;
 }
 
-.job-block-element[data-job-block-blocked-job="false"]
-  .job-block-unblocked-job-overlay {
-  opacity: 1;
-  pointer-events: none;
-  transition: opacity 200ms ease-out 200ms;
-  z-index: 2;
+.job-block-element .job-block-unblocked-job-overlay {
+  opacity: 1 !important;
+  pointer-events: none !important;
+  transition: opacity 200ms ease-out 200ms !important;
+  z-index: 2 !important;
 }
 
 .job-block-block-button {
-  background: hsl(0, 0%, 50%, 0.25);
-  border-radius: 50%;
-  cursor: pointer;
-  display: grid;
-  height: 18px;
-  margin: 10px;
-  padding: 15px;
-  pointer-events: auto;
-  transition: background-color 200ms ease-out;
-  width: 18px;
+  background: hsl(0, 0%, 50%, 0.25) !important;
+  border-radius: 50% !important;
+  cursor: pointer !important;
+  display: grid !important;
+  height: 18px !important;
+  margin: 10px !important;
+  padding: 15px !important;
+  pointer-events: auto !important;
+  transition: background-color 200ms ease-out !important;
+  width: 18px !important;
 }
 
 .job-block-block-button:hover {
-  background: hsl(0, 0%, 50%, 0.45);
+  background: hsl(0, 0%, 50%, 0.45) !important;
 }
 
 .job-block-block-button:active {
-  background: hsl(0, 0%, 50%, 0.55);
+  background: hsl(0, 0%, 50%, 0.55) !important;
 }
 
 .job-block-block-button-icon {
-  height: auto;
-  max-width: 100%;
+  height: auto !important;
+  max-width: 100% !important;
 }
 
 .job-block-attribute-toggle-button {
-  --gap: 2.4px;
-  --hidden-indicator-height: 20.4px;
-  align-items: center;
-  border: 1px hsl(0, 0%, 100%) solid;
-  border-radius: 10px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  height: 67px;
-  justify-content: center;
-  margin: 10px;
-  min-width: 64px;
-  padding: 0 20px;
-  position: relative;
-  transition: background-color 200ms ease-out, color 100ms ease-out;
-  user-select: none;
-  width: max-content;
+  --gap: 2.4px !important;
+  --hidden-indicator-height: 20.4px !important;
+  align-items: center !important;
+  border: 1px hsl(0, 0%, 100%) solid !important;
+  border-radius: 10px !important;
+  cursor: pointer !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: 67px !important;
+  justify-content: center !important;
+  margin: 10px !important;
+  min-width: 64px !important;
+  padding: 0 20px !important;
+  position: relative !important;
+  transition: background-color 200ms ease-out, color 100ms ease-out !important;
+  user-select: none !important;
+  width: max-content !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"] {
-  background: hsl(0, 0%, 100%, 0);
-  color: hsl(0, 0%, 100%);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"] {
+  background: hsl(0, 0%, 100%, 0) !important;
+  color: hsl(0, 0%, 100%) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"]:hover {
-  background: hsl(0, 0%, 100%, 0.2);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]:hover {
+  background: hsl(0, 0%, 100%, 0.2) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"]:active {
-  background: hsl(0, 0%, 100%, 0.3);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]:active {
+  background: hsl(0, 0%, 100%, 0.3) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"] {
-  background: hsl(0, 0%, 100%, 1);
-  color: hsl(0, 0%, 0%);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"] {
+  background: hsl(0, 0%, 100%, 1) !important;
+  color: hsl(0, 0%, 0%) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"]:hover {
-  background: hsl(0, 0%, 100%, 0.8);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]:hover {
+  background: hsl(0, 0%, 100%, 0.8) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"]:active {
-  background: hsl(0, 0%, 100%, 0.7);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]:active {
+  background: hsl(0, 0%, 100%, 0.7) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute="promotionalStatus"] {
-  border: 1px hsl(60, 50%, 80%, 1) solid;
+.job-block-attribute-toggle-button[data-hns-attribute="promotionalStatus"] {
+  border: 1px hsl(60, 50%, 80%, 1) solid !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"][data-job-attribute="promotionalStatus"] {
-  background: hsl(60, 50%, 80%, 0);
-  color: hsl(60, 50%, 80%, 1);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"] {
+  background: hsl(60, 50%, 80%, 0) !important;
+  color: hsl(60, 50%, 80%, 1) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"][data-job-attribute="promotionalStatus"]:hover {
-  background: hsl(60, 50%, 80%, 0.2);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:hover {
+  background: hsl(60, 50%, 80%, 0.2) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"][data-job-attribute="promotionalStatus"]:active {
-  background: hsl(60, 50%, 80%, 0.3);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:active {
+  background: hsl(60, 50%, 80%, 0.3) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"][data-job-attribute="promotionalStatus"] {
-  background: hsl(60, 50%, 80%, 1);
-  color: hsl(0, 0%, 0%);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"] {
+  background: hsl(60, 50%, 80%, 1) !important;
+  color: hsl(0, 0%, 0%) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"][data-job-attribute="promotionalStatus"]:hover {
-  background: hsl(60, 50%, 80%, 0.8);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:hover {
+  background: hsl(60, 50%, 80%, 0.8) !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"][data-job-attribute="promotionalStatus"]:active {
-  background: hsl(60, 50%, 80%, 0.7);
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:active {
+  background: hsl(60, 50%, 80%, 0.7) !important;
 }
 
 .job-block-attribute-toggle-button-text {
-  max-width: 25ch;
-  overflow: hidden;
-  text-align: center;
-  text-overflow: ellipsis;
-  transition: transform 200ms ease-out;
-  white-space: nowrap;
+  max-width: 25ch !important;
+  overflow: hidden !important;
+  text-align: center !important;
+  text-overflow: ellipsis !important;
+  transition: transform 200ms ease-out !important;
+  white-space: nowrap !important;
 }
 
 .job-block-attribute-toggle-button-hidden-indicator {
-  align-items: center;
-  background: hsl(0, 0%, 50%);
-  border-radius: 12px;
-  color: hsl(0, 0%, 100%);
-  display: grid;
-  font-size: 12px;
-  height: var(--hidden-indicator-height);
-  position: absolute;
-  text-align: center;
-  top: calc(50% + (var(--hidden-indicator-height) * 0.5) + var(--gap));
-  width: 53.4px;
+  align-items: center !important;
+  background: hsl(0, 0%, 50%) !important;
+  border-radius: 12px !important;
+  color: hsl(0, 0%, 100%) !important;
+  display: grid !important;
+  font-size: 12px !important;
+  height: var(--hidden-indicator-height) !important;
+  position: absolute !important;
+  text-align: center !important;
+  top: calc(
+    50% + (var(--hidden-indicator-height) * 0.5) + var(--gap)
+  ) !important;
+  width: 53.4px !important;
 }
 
-.job-block-element[data-job-board-id="indeed"]
+.job-block-element[data-hns-job-board-id="indeed"]
   .job-block-attribute-toggle-button-hidden-indicator {
-  line-height: 1;
+  line-height: 1 !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"]
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
   .job-block-attribute-toggle-button-hidden-indicator {
-  opacity: 1;
-  transition: opacity 200ms ease-out 100ms, transform 200ms ease-out;
+  opacity: 1 !important;
+  transition: opacity 200ms ease-out 100ms, transform 200ms ease-out !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="false"]
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]
   .job-block-attribute-toggle-button-hidden-indicator {
-  opacity: 0;
-  transition: opacity 200ms ease-out, transform 200ms ease-out;
+  opacity: 0 !important;
+  transition: opacity 200ms ease-out, transform 200ms ease-out !important;
 }
 
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"]
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
   .job-block-attribute-toggle-button-text,
-.job-block-attribute-toggle-button[data-job-attribute-value-blocked="true"]
+.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
   .job-block-attribute-toggle-button-hidden-indicator {
   transform: translateY(
     calc((var(--hidden-indicator-height) + var(--gap)) * -0.5)
-  );
+  ) !important;
 }
