--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -351,13 +351,12 @@ html[data-applicable-tab="false"] .options-for-inapplicable-tabs {
 }
 
 .hidden-job-container svg {
-  aspect-ratio: 1 / 1;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  height: 100%;
-  max-width: 100%;
+  height: 19px;
   transition: 200ms ease-out;
   transition-property: fill;
+  width: 19px;
 }
 
 .hidden-job-container:hover svg {
