--- a/extension/popup/css/popup.css
+++ b/extension/popup/css/popup.css
@@ -65,6 +65,35 @@ main {
   padding: var(--main-padding);
 }
 
+header {
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+}
+
+.brand-container {
+  background: hsl(39, 77%, 83%);
+  display: flex;
+  gap: 1rem;
+  grid-column: 1 / 3;
+  grid-row: 1;
+  height: 3rem;
+  place-content: center;
+  place-items: center;
+  width: 100%;
+  z-index: 1;
+}
+
+.brand-container > h1 {
+  line-height: 1;
+  margin-top: 4px;
+}
+
+.brand-container > img {
+  height: 100%;
+}
+
 .hide-n-seek-title {
   color: hsl(0, 0%, 0%);
   font-size: 1.25rem;
@@ -73,20 +102,40 @@ main {
   text-align: center;
 }
 
-.branding-container {
-  display: flex;
-  gap: 1rem;
-  height: 3rem;
-  place-items: center;
-}
-
-.branding-container > h1 {
-  line-height: 1;
+#settings-toggle {
+  aspect-ratio: 1;
+  background: hsl(0, 0%, 100%, 0.3);
+  border-radius: 50%;
+  fill: hsl(0, 0%, 0%);
+  grid-column: 2 / 3;
+  grid-row: 1;
+  height: 1.75rem;
+  justify-self: end;
   margin-top: 4px;
+  transition: 200ms ease-out;
+  transition-property: background-color;
+  z-index: 1;
 }
 
-.branding-container > img {
-  height: 100%;
+#settings-toggle:hover {
+  background: hsl(0, 0%, 100%, 0.5);
+  fill: hsl(0, 0%, 20%);
+}
+
+#settings-toggle:active {
+  background: hsl(0, 0%, 100%, 0.6);
+}
+
+main.with-settings #settings-toggle {
+  background: hsl(0, 0%, 100%, 0.6);
+}
+
+main.with-settings #settings-toggle:hover {
+  background: hsl(0, 0%, 100%, 0.5);
+}
+
+main.with-settings #settings-toggle:active {
+  background: hsl(0, 0%, 100%, 0.3);
 }
 
 .options-container {
@@ -195,21 +244,50 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
 }
 
 .job-name-search-container > button {
-  background: hsl(0, 0%, 0%, 0);
+  background: hsl(0, 0%, 0%, 0.1);
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   height: auto;
+  position: relative;
   transition: 200ms ease-out;
   transition-property: background-color, opacity;
   width: 30px;
 }
 
+.job-name-search-container > button:disabled {
+  transition-delay: 200ms;
+}
+
 .job-name-search-container > button:hover {
-  background: hsl(0, 0%, 0%, 0.1);
+  background: hsl(0, 0%, 0%, 0.2);
 }
 
 .job-name-search-container > button:active {
-  background: hsl(0, 0%, 0%, 0.2);
+  background: hsl(0, 0%, 0%, 0.3);
+}
+
+.job-name-search-container > button > img {
+  z-index: 1;
+}
+
+.job-name-search-container > button > .glass {
+  backdrop-filter: blur(1.2px) brightness(1.1) contrast(1.2);
+  background: hsl(0, 0%, 0%, 0);
+  border-radius: 50%;
+  height: 11.3px;
+  left: 7.1px;
+  position: absolute;
+  top: 7.9px;
+  transition: background-color 200ms ease-out;
+  transition-delay: 200ms;
+  width: 11.3px;
+  z-index: 0;
+}
+
+.job-name-search-container > button:disabled > .glass {
+  background: hsl(0, 0%, 0%, 1);
+  backdrop-filter: blur(0) brightness(1) contrast(1);
+  transition-delay: 0ms;
 }
 
 .hidden-jobs-container {
@@ -375,7 +453,9 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
 }
 
 button {
+  background: transparent;
   border: none;
+  border-radius: 0.5rem;
   cursor: pointer;
   display: grid;
   font-family: inherit;
@@ -384,7 +464,6 @@ button {
   place-items: center;
   transition: 200ms ease-out;
   transition-property: background-color, opacity;
-  width: 100%;
 }
 
 :disabled {
@@ -396,36 +475,67 @@ button {
 
 .text-button {
   border: none;
-  border-radius: 0.5rem;
   color: hsl(0, 0%, 100%);
   height: 50px;
-  padding: 1rem;
   transition: 200ms ease-out;
   transition-property: background-color, opacity;
 }
 
-.option-button {
+.red-button {
   background: hsl(0, 100%, 30%);
 }
 
-.option-button:hover {
+.red-button:hover {
   background: hsl(0, 100%, 40%);
 }
 
-.option-button:active {
+.red-button:active {
   background: hsl(0, 100%, 45%);
 }
 
-.undo-button {
+.gray-button {
   background: hsl(0, 0%, 30%);
 }
 
-.undo-button:hover {
+.gray-button:hover {
   background: hsl(0, 0%, 40%);
 }
 
-.undo-button:active {
+.gray-button:active {
   background: hsl(0, 0%, 45%);
+}
+
+.black-button {
+  background: hsl(0, 0%, 0%);
+}
+
+.black-button:hover {
+  background: hsl(0, 0%, 20%);
+}
+
+.black-button:active {
+  background: hsl(0, 0%, 30%);
+}
+
+.button-strip {
+  display: grid;
+  gap: 1rem;
+  grid-auto-flow: column;
+  height: 50px;
+  width: 100%;
+  z-index: 0;
+}
+
+#settings-strip {
+  margin-top: -4.125rem;
+  opacity: 0;
+  transition: margin-top 200ms ease 200ms, opacity 200ms ease-out;
+}
+
+main.with-settings #settings-strip {
+  margin-top: 0;
+  opacity: 1;
+  transition: margin-top 200ms ease, opacity 200ms ease-out 200ms;
 }
 
 .toggle-container {
