--- a/extension/content-script/css/content-script.css
+++ b/extension/content-script/css/content-script.css
@@ -1,13 +1,13 @@
-html [data-hns-job-element] {
+html [data-hns-job-listing] {
   position: relative !important;
 }
 
 html[data-hns-remove-hidden-jobs="true"]
-  [data-hns-job-element]:has([data-hns-blocked-attribute="true"]) {
+  [data-hns-job-listing]:has([data-hns-blocked-attribute="true"]) {
   display: none !important;
 }
 
-.job-block-element {
+.hns-element {
   all: unset !important;
   background: transparent !important;
   display: block !important;
@@ -21,24 +21,24 @@ html[data-hns-remove-hidden-jobs="true"]
   width: 100% !important;
 }
 
-.job-block-element[data-hns-job-board-id="glassdoor"] {
+.hns-element[data-hns-job-board-id="glassdoor"] {
   z-index: 1 !important;
 }
 
-.job-block-element[data-hns-job-board-id="indeed"] {
+.hns-element[data-hns-job-board-id="indeed"] {
   z-index: 1 !important;
 }
 
-.job-block-element[data-hns-job-board-id="linkedIn"] {
+.hns-element[data-hns-job-board-id="linkedIn"] {
   z-index: 3 !important;
 }
 
-.job-block-element * {
+.hns-element * {
   all: unset !important;
 }
 
-.job-block-blocked-job-overlay,
-.job-block-unblocked-job-overlay {
+.hns-blocked-job-overlay,
+.hns-unblocked-job-overlay {
   align-content: center !important;
   display: flex !important;
   flex-direction: row !important;
@@ -53,14 +53,13 @@ html[data-hns-remove-hidden-jobs="true"]
   z-index: 1 !important;
 }
 
-.job-block-blocked-job-overlay {
+.hns-blocked-job-overlay {
   backdrop-filter: blur(10px) !important;
   background: hsl(0, 0%, 50%, 0.75) !important;
   justify-content: center !important;
 }
 
-.job-block-element:has([data-hns-blocked-attribute="true"])
-  .job-block-blocked-job-overlay {
+.hns-element:has([data-hns-blocked-attribute="true"]) .hns-blocked-job-overlay {
   opacity: 1 !important;
   pointer-events: auto !important;
   transition: opacity 200ms ease-out !important;
@@ -68,35 +67,35 @@ html[data-hns-remove-hidden-jobs="true"]
   z-index: 2 !important;
 }
 
-.job-block-element .job-block-blocked-job-overlay {
+.hns-blocked-job-overlay {
   opacity: 0 !important;
   pointer-events: none !important;
   transition: opacity 200ms ease-out 200ms !important;
   z-index: 1 !important;
 }
 
-.job-block-unblocked-job-overlay {
+.hns-unblocked-job-overlay {
   backdrop-filter: blur(0) !important;
   background: hsl(0, 0%, 50%, 0) !important;
   justify-content: end !important;
 }
 
-.job-block-element:has([data-hns-blocked-attribute="true"])
-  .job-block-unblocked-job-overlay {
+.hns-element:has([data-hns-blocked-attribute="true"])
+  .hns-unblocked-job-overlay {
   opacity: 0 !important;
   pointer-events: auto !important;
   transition: opacity 200ms ease-out !important;
   z-index: 1 !important;
 }
 
-.job-block-element .job-block-unblocked-job-overlay {
+.hns-unblocked-job-overlay {
   opacity: 1 !important;
   pointer-events: none !important;
   transition: opacity 200ms ease-out 200ms !important;
   z-index: 2 !important;
 }
 
-.job-block-block-button {
+.hns-block-button {
   background: hsl(0, 0%, 50%, 0.25) !important;
   border-radius: 50% !important;
   cursor: pointer !important;
@@ -109,20 +108,22 @@ html[data-hns-remove-hidden-jobs="true"]
   width: 18px !important;
 }
 
-.job-block-block-button:hover {
+.hns-block-button:hover {
   background: hsl(0, 0%, 50%, 0.45) !important;
 }
 
-.job-block-block-button:active {
+.hns-block-button:active {
   background: hsl(0, 0%, 50%, 0.55) !important;
 }
 
-.job-block-block-button-icon {
-  height: auto !important;
-  max-width: 100% !important;
+.hns-block-button path {
+  d: path(
+    "M 22.446 46.837 C 19.513 46.837 16.754 46.279 14.171 45.162 C 11.588 44.045 9.329 42.52 7.396 40.587 C 5.463 38.654 3.946 36.395 2.846 33.812 C 1.746 31.229 1.196 28.454 1.196 25.487 C 1.196 22.587 1.754 19.845 2.871 17.262 C 3.988 14.679 5.504 12.429 7.421 10.512 C 9.338 8.595 11.588 7.079 14.171 5.962 C 16.754 4.845 19.513 4.287 22.446 4.287 C 25.379 4.287 28.138 4.845 30.721 5.962 C 33.304 7.079 35.554 8.595 37.471 10.512 C 39.388 12.429 40.913 14.679 42.046 17.262 C 43.179 19.845 43.746 22.587 43.746 25.487 C 43.746 28.454 43.188 31.229 42.071 33.812 C 40.954 36.395 39.429 38.654 37.496 40.587 C 35.563 42.52 33.304 44.045 30.721 45.162 C 28.138 46.279 25.379 46.837 22.446 46.837 Z M 22.446 42.137 C 27.046 42.137 30.954 40.52 34.171 37.287 C 37.388 34.054 38.996 30.12 38.996 25.487 C 38.996 23.687 38.713 21.937 38.146 20.237 C 37.579 18.537 36.746 16.987 35.646 15.587 L 12.496 38.687 C 13.829 39.887 15.363 40.762 17.096 41.312 C 18.829 41.862 20.613 42.137 22.446 42.137 Z M 9.296 35.437 L 32.346 12.337 C 30.913 11.237 29.363 10.412 27.696 9.862 C 26.029 9.312 24.279 9.037 22.446 9.037 C 17.846 9.037 13.938 10.629 10.721 13.812 C 7.504 16.995 5.896 20.887 5.896 25.487 C 5.896 27.32 6.204 29.087 6.821 30.787 C 7.438 32.487 8.263 34.037 9.296 35.437 Z"
+  ) !important;
+  fill: hsl(0, 100%, 50%) !important;
 }
 
-.job-block-attribute-toggle-button {
+.hns-block-attribute-toggle {
   --gap: 2.4px !important;
   --hidden-indicator-height: 20.4px !important;
   align-items: center !important;
@@ -142,63 +143,63 @@ html[data-hns-remove-hidden-jobs="true"]
   width: max-content !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"] {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"] {
   background: hsl(0, 0%, 100%, 0) !important;
   color: hsl(0, 0%, 100%) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]:hover {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"]:hover {
   background: hsl(0, 0%, 100%, 0.2) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]:active {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"]:active {
   background: hsl(0, 0%, 100%, 0.3) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"] {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"] {
   background: hsl(0, 0%, 100%, 1) !important;
   color: hsl(0, 0%, 0%) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]:hover {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"]:hover {
   background: hsl(0, 0%, 100%, 0.8) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]:active {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"]:active {
   background: hsl(0, 0%, 100%, 0.7) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-attribute="promotionalStatus"] {
+.hns-block-attribute-toggle[data-hns-attribute="promotionalStatus"] {
   border: 1px hsl(60, 50%, 80%, 1) solid !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"] {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"] {
   background: hsl(60, 50%, 80%, 0) !important;
   color: hsl(60, 50%, 80%, 1) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:hover {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:hover {
   background: hsl(60, 50%, 80%, 0.2) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:active {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"][data-hns-attribute="promotionalStatus"]:active {
   background: hsl(60, 50%, 80%, 0.3) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"] {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"] {
   background: hsl(60, 50%, 80%, 1) !important;
   color: hsl(0, 0%, 0%) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:hover {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:hover {
   background: hsl(60, 50%, 80%, 0.8) !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:active {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"][data-hns-attribute="promotionalStatus"]:active {
   background: hsl(60, 50%, 80%, 0.7) !important;
 }
 
-.job-block-attribute-toggle-button-text {
+.hns-block-attribute-toggle-text {
   max-width: 25ch !important;
   overflow: hidden !important;
   text-align: center !important;
@@ -207,7 +208,7 @@ html[data-hns-remove-hidden-jobs="true"]
   white-space: nowrap !important;
 }
 
-.job-block-attribute-toggle-button-hidden-indicator {
+.hns-block-attribute-toggle-hidden-indicator {
   align-items: center !important;
   background: hsl(0, 0%, 50%) !important;
   border-radius: 12px !important;
@@ -223,27 +224,27 @@ html[data-hns-remove-hidden-jobs="true"]
   width: 53.4px !important;
 }
 
-.job-block-element[data-hns-job-board-id="indeed"]
-  .job-block-attribute-toggle-button-hidden-indicator {
+.hns-element[data-hns-job-board-id="indeed"]
+  .hns-block-attribute-toggle-hidden-indicator {
   line-height: 1 !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
-  .job-block-attribute-toggle-button-hidden-indicator {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"]
+  .hns-block-attribute-toggle-hidden-indicator {
   opacity: 1 !important;
   transition: opacity 200ms ease-out 100ms, transform 200ms ease-out !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="false"]
-  .job-block-attribute-toggle-button-hidden-indicator {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="false"]
+  .hns-block-attribute-toggle-hidden-indicator {
   opacity: 0 !important;
   transition: opacity 200ms ease-out, transform 200ms ease-out !important;
 }
 
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
-  .job-block-attribute-toggle-button-text,
-.job-block-attribute-toggle-button[data-hns-blocked-attribute="true"]
-  .job-block-attribute-toggle-button-hidden-indicator {
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"]
+  .hns-block-attribute-toggle-text,
+.hns-block-attribute-toggle[data-hns-blocked-attribute="true"]
+  .hns-block-attribute-toggle-hidden-indicator {
   transform: translateY(
     calc((var(--hidden-indicator-height) + var(--gap)) * -0.5)
   ) !important;
